# HolderPro

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  native.yml  release-build.yml  release-publish.yml
docs/: architecture.md  building.md  cli.md  corresponding-source.md  legal-review-brief.md  licensing.md  privacy.md  release-authenticity.md  releasing.md  troubleshooting.md  uninstalling.md  user-guide.md
native/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
native/schema/: support-layers-v1.schema.json  support-paint-v1.txt
native/src/: main.cpp  private_output.hpp
native/tests/: input-output-alias.cmake  private-output.cpp
native/windows/: holderpro-organic-engine.manifest
packaging/: dependency-binary-source-lock.json  dependency-source-requirements.json  native-runtime-allowlist.json  prusaslicer-native-dependency-sources.json  release-constraints.txt  release-targets.json  source-manifest.toml
packaging/linux/: AppRun  holderpro.desktop  package.sh
packaging/macos/: package_dmg.sh
packaging/pyinstaller/: HolderPro.spec  bundle-policy.json  launcher.py
packaging/scripts/: audit_macos_deployment_targets.py  audit_native_dependencies.py  build_corresponding_source.py  build_dependency_manifest.py  build_icons.py  build_native_license_bundle.py  build_platform_wheel.py  check_bundle_policy_regression.py  check_licenses.py  checksums.py  collect_python_licenses.py  fetch_dependency_sources.py  package_identity.py  refresh_desktop_native_manifest.py  release_version.py  sign_macos_nested_code.py  validate_schema.py  verify_corresponding_source.py  verify_desktop_bundle.py  verify_macos_bundle.py  verify_native_stage.py  verify_platform_wheel.py  verify_pypi_release.py  verify_python_licenses.py  verify_release_assets.py  verify_release_provenance.py  verify_source_manifest.py  write_build_environment.py  write_release_asset_manifest.py
packaging/windows/: HolderPro.iss  package.ps1
scripts/: build-native.ps1  build-native.sh  prefetch-native-dependencies.cmake  run-gui.sh
src/holderpro/: __init__.py  cli.py  diagnostics.py  engine.py  errors.py  mesh_io.py  network_base.py  preview.py  runner.py  solidify.py  surface_analysis.py  threemf.py  ui.py  version.py  workers.py
src/holderpro/_native/: __init__.py
tests/: test_corresponding_source_closure.py  test_dependency_manifest_evidence.py  test_macos_deployment_audit.py  test_native_license_bundle.py  test_network_base.py  test_platform_wheel_policy.py  test_preview_mesh.py  test_productization.py  test_pypi_release_policy.py  test_real_engine.py  test_release_provenance_policy.py  test_runner.py  test_solidify.py  test_surface_analysis.py  test_threemf.py  test_workers.py
upstream/prusaslicer-2.9.6-organic/: MANIFEST.sha256  README.md
